fix avatar-text spacings

--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -468,7 +468,7 @@ mgt-person .person-root {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    line-height: 1.6;
+    line-height: 1.4;
     margin: var($details-spacing, 0px 0px 0px 12px);
 
     &.small {
@@ -488,23 +488,28 @@ mgt-person .person-root {
 
     &.fourLines {
       margin: var($details-spacing, 0px 0px 0px 16px);
+      height: 84px;
       .line1 {
         font-size: 20px;
         line-height: 26px;
+        margin-bottom: 6px;
       }
     }
 
     &.vertical {
       text-align: center;
-      margin: var($details-spacing, 12px 12px 0px 0px);
+      margin: var($details-spacing, 10px 12px 0px 0px);
 
       &.small {
-        margin: var($details-spacing, 12px 6px 0px 0px);
+        margin: var($details-spacing, 10px 6px 0px 0px);
       }
 
       &.threelines,
       &.fourlines {
-        margin: var($details-spacing, 16px 0px 0px 0px);
+        margin: var($details-spacing, 14px 0px 0px 0px);
+        .line1 {
+          margin-bottom: 0;
+        }
       }
     }
 
@@ -519,10 +524,6 @@ mgt-person .person-root {
       font-weight: $font-weight;
       text-transform: $text-transform;
       line-height: 20px;
-      & > text {
-        padding: 0;
-        margin: 0;
-      }
     }
 
     .line2 {
